<resources>
    <!--    Authorization Activity-->
    <string name="app_name">AnimatedAuthenticationScreens</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\\\'t have an account?</string>

    <!--    Login Fragment-->
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login_successfully">Login Successfully</string>

    <!--    Forgot Password-->
    <string name="forgot_password">Forgot Password</string>
    <string name="otp">OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="edit_email">Edit Email</string>
</resources>